force-app/main/default/objects/Inbound_Email__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Emails</relationshipLabel>
    <relationshipName>Inbound_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>