force-app/main/default/objects/Inbound_Email__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Inbound Emails</relationshipLabel>
    <relationshipName>Inbound_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>