force-app/main/default/objects/Inbound_Email__c/fields/Cc__c.field-meta.xml
<CustomField>
    <fullName>Cc__c</fullName>
    <label>Cc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>