force-app/main/default/objects/Inbound_Email__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inbound Emails</relationshipLabel>
    <relationshipName>Inbound_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>