force-app/main/default/objects/Inbound_Email__c/fields/Delivery_Phase__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phase__c</fullName>
    <formula>TEXT(Case__r.Delivery_Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Phase</label>
    <type>Text</type>
</CustomField>