force-app/main/default/objects/Inbound_Email__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <type>TextArea</type>
</CustomField>