force-app/main/default/objects/Inbound_Email__c/fields/fromAddress__c.field-meta.xml
<CustomField>
    <fullName>fromAddress__c</fullName>
    <label>fromAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>