force-app/main/default/objects/Inbound_Email__c/fields/htmlBody__c.field-meta.xml
<CustomField>
    <fullName>htmlBody__c</fullName>
    <label>htmlBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>