force-app/main/default/objects/Inbound_Email__c/fields/textBody__c.field-meta.xml
<CustomField>
    <fullName>textBody__c</fullName>
    <label>textBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>