force-app/main/default/objects/Inbound_Email__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>