force-app/main/default/objects/Inbound_Email__c/listViews/Un_Allocated_Delivery_Emails.listView-meta.xml
<ListView>
    <fullName>Un_Allocated_Delivery_Emails</fullName>
    <columns>NAME</columns>
    <columns>Received_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>From__c</columns>
    <columns>fromAddress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>equals</operation>
    </filters>
    <label>Un-Allocated Delivery Emails</label>
</ListView>