force-app/main/default/objects/Inbound_Email__c/listViews/Un_allocated_Emails.listView-meta.xml
<ListView>
    <fullName>Un_allocated_Emails</fullName>
    <columns>Received_Date__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>From__c</columns>
    <columns>fromAddress__c</columns>
    <columns>Case__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Delivery_Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>contains</operation>
        <value>ref:</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Terminate,Closed/Lost</value>
    </filters>
    <label>Terminated/Closed Delivery Emails</label>
</ListView>